    `X-OPENMEDIAVAULT-SESSIONID` header instead of a cookie.
    The session ID is returned with the response of the
    `Session::login` RPC.
  * Reduce the query time when determining the SMART information
    by reducing the query parameters to the minimum.
  * Add a dashboard widget to display the temperatures of all
    physical disks.
  * Issue #1649: Rearrange the `Storage | Shared Folders | ACL`
    page.
  * Issue #1676: Add an UI endpoint to trigger a download via RPC.
    Plugins can use `/download?service=xxx&method=xxx&params=xxx`
    to start a download that is implemented in the specified RPC.
    Note, the JSON content of the `params` argument may be encoded.
    Check the `encodeURIComponent` JS function for more details.
  * Issue #1690: Replace hdparm with smartctl for better hardware
    support.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Jul 2023 13:17:39 +0200

openmediavault (6.9.14-1) stable; urgency=low

  * Issue #1703: Try to list devices in `SMART | Devices` page,
    even if smartctl fails.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 05 Feb 2024 21:55:58 +0100

openmediavault (6.9.13-1) stable; urgency=low

  * Issue #1699: Fix problem with configuring WiFi network
    interfaces in omv-firstaid.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 02 Feb 2024 16:40:07 +0100

openmediavault (6.9.12-3) stable; urgency=low

  * Various improvements.
  * Create the missing SSH runtime directory so that testing
    the SSH configuration is successful.
  * Fix a bug in root file system detection that allowed the
    unmounting of the root file system in some situations.
  * Add UDEV rule to fix the duplicate serial number issue on Qnap
    TR-002 devices.
  * Issue #1698: Show only monitored devices in the SMART dashboard
    widget

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 Jan 2024 21:00:15 +0100

openmediavault (6.9.11-4) stable; urgency=low
